based on the previous version, I added multiple other charts, didn't put as mvc structure, just refer as js in html, but workable, besides, I added bootstrapTest.html, have a basic form working

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
 	
 	<link rel="stylesheet" href="css/treeMap.css"/>
 	
+	<link rel="stylesheet" href="css/treeEx.css"/>
+	
 	<!-- newly added June 1 -->
 	<!-- <link rel="stylesheet" href="css/bootstrap-combined.min.css">
   <link rel="stylesheet" href="css/timetree_basic.css">
@@ -27,7 +29,7 @@
   
 	<style>
 		html 					{ overflow-y:scroll; }
-		body 					{ padding-top:500px; }
+		body 					{ padding-top:50px; }
 		#todo-list 				{ margin-bottom:30px; }
 		#todo-form 	 			{ margin-bottom:50px; }
 		
@@ -191,6 +193,15 @@
   <label><input type="radio" name="mode" value="count"> Count</label>
 </form>
 <script src = "js/controllers/treeMap.js"></script>
+</div>
+
+<!-- newly added -->
+<div>
+<script src = "js/controllers/tree.js"></script>
+<div>
+
+<div>
+<script src = "js/controllers/sortableBar.js"></script>
 </div>
 
 
