charts are good but the html is not working

--- a/public/issue.152.html
+++ b/public/issue.152.html
@@ -3,11 +3,25 @@
 <html>
 
 <head>
-    <script type="text/javascript" src="js/angular.js"></script>
-    <script type="text/javascript" src="js/d3.js"></script>
-    <script type="text/javascript" src="js/nv.d3.js"></script>
-    <script type="text/javascript" src="../dist/angularjs-nvd3-directives.js"></script>
-    <link rel="stylesheet" href="stylesheets/nv.d3.css" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF8">
+    <script src="external/javascripts/vendor/angularjs-nvd3-directives/examples/js/angular.js"></script>
+    <script src="external/javascripts/vendor/angularjs-nvd3-directives/examples/js/d3.js"></script>
+    <script src="external/javascripts/vendor/angularjs-nvd3-directives/examples/js/nv.d3.js"></script>
+    <script src="external/javascripts/vendor/angularjs-nvd3-directives/examples/js/moment.js"></script>
+                      <script src="external/javascripts/vendor/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
+    <link rel="stylesheet" href="external/javascripts/vendor/angularjs-nvd3-directives/examples/stylesheets/nv.d3.css"/>
+    	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script><!-- load angular -->
+
+	<script src="js/controllers/main.js"></script> <!-- load up our controller -->
+	<script src="js/services/todos.js"></script> <!-- load our todo service -->
+	<script src="js/core.js"></script> <!-- load our main application -->
+
+<!-- newly added -->
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="external/javascripts/vendor/nv.d3.js"></script> 
+<script src="js/directives/angular-nvd3.js"></script>
+    
+    
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" />
 
     <script>
